# Jira

./: .dockerignore  .env.example  .flake8  .gitignore  CLAUDE.md  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt
.claude/agents/: code-reviewer.md  debugger.md
.cursor/rules/: project-overview.mdc  unit-testing.mdc
Jira/: asgi.py  settings.py  urls.py  views.py  wsgi.py
tasks/: admin.py  api.py  models.py  routing.py  test_ai_api.py  test_ai_services.py  test_api.py  test_filters.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_tasksummary_alter_taskactivity_options_and_more.py
tasks/services/: __init__.py  base.py  builders.py  interfaces.py  mock_service.py  openai_service.py  prompts.py  repositories.py  task_summary.py
tasks/services/estimation/: __init__.py  ai_similarity.py  base.py  service.py
tasks/services/parser/: __init__.py  base.py  mock_parser.py  openai_parser.py  service.py
tasks/services/summary/: __init__.py  analyzer.py  base.py  mock_provider.py  openai_provider.py  service.py
tasks/websockets/: ai_consumers.py  base.py  routing.py  tests.py
templates/: base.html  home.html
templates/tasks/: dashboard.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
